# FinanceApp

./: .env  .gitignore  .mcp.json  CLAUDE.md  MIGRATION_SUMMARY.md  README.md  REFACTORING.md  config.ini  logging.conf  main.py  pyproject.toml  pyrightconfig.json  run.sh
.claude/: settings.json
.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _random.data.json  _random.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  config.data.json  config.meta.json  contracts.data.json  contracts.meta.json  copy.data.json  copy.meta.json  datetime.data.json  datetime.meta.json  enum.data.json  enum.meta.json  futures_service.data.json  futures_service.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  model.data.json  model.meta.json  my_ib_client.data.json  my_ib_client.meta.json  options_service.data.json  options_service.meta.json  others.data.json  others.meta.json  posix.data.json  posix.meta.json  (+26 more)
.qt_for_python/uic/: main_window.py  realtime_data.py  stocks_page.py  threads.py
docs/: testability_via_mcp.md  testability_via_regolith.md
finance_app/: helpers.py  logging.conf  main.py  resources.py  typings.py
finance_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
financeapp/: main.glade  main.py
financeapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp_server/: pyqt_mcp.py
tests/: test_cellarstone_app_3.py  test_financeapp.py
(+2590 files in other folders)
