[tool.poetry]
name = "financeapp"
version = "0.1.0"
description = ""
authors = ["Lukas Kellerstein <lukas.kellerstein@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas_datareader = "^0.8.1"
pandas = "^1.0.1"
matplotlib = "^3.2.0"
pygobject = "^3.36.0"
ib_insync = "^0.9.59"
jsonpickle = "^1.3"
gbulb = "^0.6.1"
asyncio = "^3.4.3"
pinject = "^0.14.1"
rx = "^3.1.0"
pymongo = "^3.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = "^19.10b0"
rope = "^0.16.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
