[project]
name = "finance-app"
version = "0.1.0"
description = ""
authors = [
    { name = "Lukas Kellerstein", email = "lukas.kellerstein@gmail.com" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "pyqt6>=6.6.0",
    "pyqtgraph>=0.13.7",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.10.0",
    "rx>=3.2.0",
    "pylint>=4.0.0",
    "QuantLib>=1.40",
    "pystore>=0.1.22",
    "dask[dataframe]>=2025.1.0",
    "exchange-calendars>=4.11.0",
    "holidays>=0.85",
    "pyarrow>=18.0.0",
    "mcp[cli]>=1.3.0",
    "ibapi",
]

[tool.uv.sources]
ibapi = { path = "lib/ibapi", editable = true }

[tool.setuptools.packages.find]
where = ["src", "lib"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "flake8>=7.0.0",
    "black>=25.0.0",
    "rope>=1.13.0",
]
